# pipe-fp

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/pipe_fp/: pipe.py
src/pipepy/: __init__.py  pipe.py
test/: test_pipe.py
