[tool.poetry]
name = "pipe-py"
version = "1.1.0"
description = "Functional piping for Python. ➡️"
license = "MIT"
authors = ["A-4S <dev.forsythe@gmail.com>"]
keywords = [
    "python",
    "fp",
    "utility"
]
readme = "README.md"
packages = [{include = "pipepy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
