[project]
name = "pipe-py"
version = "1.1.1"
description = "Functional piping for Python. ➡️"
license = "MIT"
authors = [
    {name = "A-4S", email = "<dev.forsythe@gmail.com>"}
]
keywords = [
    "python",
    "fp",
    "utility"
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = [ "classifiers" ]

[tool.poetry]
packages = [{include = "pipepy", from = "src"}]
classifiers = [
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
